--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "description": "A music playlist application that manages playlists categorized by genre, artist, and songs.",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "vite",
+    "serve": "node src/index.js",
+    "start": "concurrently \"npm run serve\" \"npm run dev\"",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "concurrently": "^9.1.2",
     "vite": "^6.3.5"
   },
   "dependencies": {
